@@ -1,6 +1,6 @@
 {
   "name": "simp-dhcp",
-  "version": "6.6.0",
+  "version": "6.7.0",
   "author": "SIMP Team",
   "summary": "A Puppet module to automate configuration of DHCP",
   "license": "Apache-2.0",
@@ -18,23 +18,23 @@
     },
     {
       "name": "simp/iptables",
-      "version_requirement": ">= 6.4.0 < 7.0.0"
+      "version_requirement": ">= 6.5.3 < 7.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 3.5.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "simp/logrotate",
-      "version_requirement": ">= 6.1.0 < 7.0.0"
+      "version_requirement": ">= 6.5.0 < 7.0.0"
     },
     {
       "name": "simp/rsyslog",
-      "version_requirement": ">= 7.0.0 < 9.0.0"
+      "version_requirement": ">= 7.6.0 < 9.0.0"
     },
     {
       "name": "simp/rsync",
-      "version_requirement": ">= 6.0.0 < 7.0.0"
+      "version_requirement": ">= 6.1.1 < 7.0.0"
     }
   ],
   "operatingsystem_support": [
